# Drowsiness-Detection-with-OpenCV

./: .gitignore  LICENSE  README.md  drowsiness_detection.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
drowsiness/: __init__.py  alarm.py  cli.py  detector.py  ear.py  landmarks.py  visualization.py
file/: s
tests/: test_detector.py
